src/CSS/rulingsDisplay.css
div#cardDisplayContainer > div.cardContainer > div.rulingsDisplayWrapper {
	width: 100%;
	height: 100%;
	border: 2px solid black;
	border-radius: 16px;
	display: flex;
	flex-flow: column wrap;
	justify-content: flex-start;
}

div#cardDisplayContainer
	> div.cardContainer
	> div.rulingsDisplayWrapper
	> ul.rulingsDisplayListWrapper {
	overflow: auto;
	list-style: circle inside;
}

div#cardDisplayContainer > div.cardContainer > div.rulingsDisplayWrapper > * {
	padding: 10px;
}

div#cardDisplayContainer
	> div.cardContainer
	> div.rulingsDisplayWrapper
	> ul.rulingsDisplayListWrapper
	> li {
	font-size: 14px;
	padding: 0 20px;
	text-align: left;
}

div#cardDisplayContainer
	> div.cardContainer
	> div.rulingsDisplayWrapper
	> ul.rulingsDisplayListWrapper
	> li
	> a {
	font-size: 14px;
	padding: 0 20px;
	text-align: left;
}

div.rulingsDisplayWrapper > h3 {
	font-size: 16px;
	padding: 10px;
}

